Added margin auto just in case the width is too large.

--- a/userStories/src/app/user/user-posts/post/post-full/post-full.component.html
+++ b/userStories/src/app/user/user-posts/post/post-full/post-full.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z0" style="padding: 0px;">
+<mat-card class="mat-elevation-z0" style="padding: 0px; margin: auto;">
   <mat-card-header>
     <div mat-card-avatar [style.background-image]="profileIcon" class="example-header-image"></div>
     <mat-card-title>{{ post.title }}</mat-card-title>
