--- a/userStories/src/app/auth/login/login.component.html
+++ b/userStories/src/app/auth/login/login.component.html
@@ -8,10 +8,10 @@
       <mat-form-field class="full-width">
         <input matInput placeholder="Username" name="username" [(ngModel)]="username">
       </mat-form-field>
-
       <mat-form-field class="full-width">
         <input matInput placeholder="Password" name="password" type="password" [(ngModel)]="password">
       </mat-form-field>
+      <mat-checkbox class="example-margin" name="rememberMe" [(ngModel)]="rememberMe">Remember me</mat-checkbox>
     </form>
   </mat-card-content>
   <mat-card-actions>
